# catt-strict

./: .gitignore  Cargo.toml  README.md  disc.catt  flake.nix  test.catt
examples/: eh-common.catt  eh-cyll.catt  eh.catt  error.catt  monoidal.catt  syllepsis-su.catt  syllepsis.catt  term1  term2  test.catt
src/: command.rs  common.rs  eval.rs  lib.rs  lsp.rs  main.rs  normal.rs  parsing.rs  quote.rs  syntax.rs  term.rs  typecheck.rs  union_find.rs
src/syntax/: core.rs  mod.rs  normal.rs  raw.rs
