[package]
name = "catt_strict"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = { version = "0.3.0", features = ["auto-color"] }
chumsky = "0.9.2"
clap = { version = "4.4.8", features = ["derive"] }
derivative = "2.2.0"
itertools = "0.11.0"
pretty = "0.12.3"
rustyline = "12.0.0"
thiserror = "1.0.50"
